[package]
name = "EtH"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primitives = { path = "../primitives" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
rand = "0.3.14"
rust-crypto = "^0.2"
sha1 = "^0.2.0"