[package]
name = "general_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dv = { path = "../dv" }
EtH = { path = "../EtH" }
primitives = { path = "../primitives"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.2.1"
chrono = { version = "0.4", features = ["unstable-locales"]}