[package]
name = "js"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-primes = "0.2.0"
num-traits = "0.2"
sha2 = "0.10"
ibe = "0.1.4"
arrayref = "0.3.6"
irmaseal-curve = "0.1.1"
subtle = "2.4.1"
tiny-keccak = "2.0.2"
bls12_381 = "0.6.0"